[project]
name = "DL-TOOL"
version = "0.0.0.1"
description = "Universal video download. Yt-dip"
dependencies = [
    "flet>=0.84.0",
    "yt-dlp>=2026.3.17"
]

[tool.flet.app]
path = "."

[tool.flet]
org = "com.offpolice"
project = "DL-TOOL"
product = "DL-TOOL"

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 34
adaptive_icon_background = "#000000"
adaptive_icon_foreground = "assets/icon.png"

[tool.flet.android.permission]
"android.permission.INTERNET" = true

# (Android 13+)
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_AUDIO" = true

# (Android 11)
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
