[project]
name = "DL-TOOL"
version = "0.0.0.1"
description = "Universal video download. Yt-dip"
dependencies = [
    "flet>=0.84.0",
    "yt-dlp>=2026.3.17"
]

[tool.flet]
org = "com.offpolice"
project = "DL-TOOL"
product = "DL-TOOL"

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 34
adaptive_icon_background = "#000000"
adaptive_icon_foreground = "assets/icon.png"

[tool.flet.android.permission]
"android.permission.INTERNET" = true

# Android 13+
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_AUDIO" = true

# Для совместимости (до Android 12)
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

[tool.flet.app]
module = "main.py"

[tool.flet.android.app.startup_screen]
show = true
message = "Запускаю все функции приложения. Пожалуйста, подождите: это может занять некоторое время в зависимости от производительности устройства."
